--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "multer": "^2.0.0",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
