--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.26.2",
     "axios": "^1.9.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.12.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.11.0",
     "react-scroll": "^1.8.9",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
